--- a/docs/quickstart.texi
+++ b/docs/quickstart.texi
@@ -8,6 +8,7 @@
 
 @majorheading @beastbse Quick Start Guide
 @center Tim Janik
+@center @revision
 @*
 This guide attempts to give a few very brief hints for new users,
 in order to get started with the most basic tasks that can be
