--- a/docs/teximacros.texi
+++ b/docs/teximacros.texi
@@ -99,6 +99,12 @@
 @end rmacro
 
 
+@c --- revision bit
+@rmacro revision{}
+@ifxmlelse{,revision,nop}
+@end rmacro
+
+
 @c --- common names ---
 @macro beast
 @emphasize{BEAST}
