--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,7 @@
+Fri Aug 23 14:24:01 2002  Tim Janik  <timj@gtk.org>
+
+	* davxtalstrings.c (xmod_reset): clean up the reset implementation.
+
 Tue Aug  6 08:36:32 2002  Tim Janik  <timj@gtk.org>
 
 	* Makefile.am: remove BseGenOsc, BseStandardOsc fullfills all its
