--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Aug 23 14:52:49 2002  Tim Janik  <timj@gtk.org>
+
+	* docs/generated/markup.xsl: update from alper to fix empty paras.
+
+	* docs/generated/html.xsl: update from alper to fix empty paras.
+
 Fri Aug 23 11:27:42 2002  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstwaveeditor.c (bst_wave_editor_init): put the chunk list
