--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Aug 23 15:22:41 2002  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/images/beast-logo.png: remove the "GNU" bubble from the
+	logo pic, as beast is currently not an official GNU project.
+
 Fri Aug 23 14:52:49 2002  Tim Janik  <timj@gtk.org>
 
 	* docs/generated/markup.xsl: update from alper to fix empty paras.
