--- a/beast-gtk/TODO
+++ b/beast-gtk/TODO
@@ -1,6 +1,6 @@
 RELEASE:
 - fix copyright owners
-- help: QuickStart-Samples, QuickStart-Synthesis, QuickStart-Songs
+- help: QuickStart-Samples
 - provide a sample song
 
 URGENT:
