--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,7 @@
+Fri Aug 30 03:18:26 2002  Tim Janik  <timj@gtk.org>
+
+	* *.[hc]: update copyrights and license headers.
+
 Fri Aug 23 14:24:01 2002  Tim Janik  <timj@gtk.org>
 
 	* davxtalstrings.c (xmod_reset): clean up the reset implementation.
