--- a/docs/beast-index.texi
+++ b/docs/beast-index.texi
@@ -8,9 +8,9 @@
 @unnumbered Documentation
 
 @itemize
-@item @uref{faq.markup,,	  Frequently Asked Questions}
-@item @uref{quickstart.markup,,	  Quick Start Guide}
-@item @uref{release-notes.markup, BEAST Release Notice}
-@item @uref{news.markup,,	  BEAST NEWS File}
-@item @uref{gsl-mplan.markup,,	  GSL Engine (Development Concepts)}
+@item @uref{faq.markup,,	   Frequently Asked Questions}
+@item @uref{quickstart.markup,,	   Quick Start Guide}
+@item @uref{release-notes.markup,, BEAST Release Notice}
+@item @uref{news.markup,,	   BEAST NEWS File}
+@item @uref{gsl-mplan.markup,,	   GSL Engine (Development Concepts)}
 @end itemize
