--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,7 @@ Overview of Changes in BEAST/BSE 0.4.2:
 
 * Added documentation about GUI extensions to Gtk
 * Made documentation browser navigatable
+* Documentation processing improvements from Alper Ersoy
 * Bug fixes and major cleanups
 
 Overview of Changes in BEAST/BSE 0.4.1:
